syntax = "proto3";

package weaviate.cloud.internal.cluster;

//option go_package = "github.com/weaviate/weaviate/cloud/proto/cluster";

message JoinPeerRequest {
  string id = 1;
  string address = 2;
  bool voter = 3;
}

message RemovePeerRequest {
  string id = 1;
}

message RemovePeerResponse {}
message JoinPeerResponse {}

service ClusterService {
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse) {}
  rpc JoinPeer(JoinPeerRequest) returns (JoinPeerResponse) {}
}

message Command {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ADD_CLASS = 1;
    TYPE_UPDATE_CLASS = 2;
    TYPE_DELETE_CLASS = 3;
    TYPE_RESTORE_CLASS = 4;
    TYPE_ADD_PROPERTY = 5;

    TYPE_ADD_TENANT = 16;
    TYPE_UPDATE_TENANT = 17;
    TYPE_DELETE_TENANT = 18;
  }
  Type type = 1;
  string class = 2;
  bytes sub_command = 3;
}

message AddTenantsRequest {
  repeated Tenant tenants = 1;
}

message UpdateTenantsRequest {
  repeated Tenant tenants = 1;
}

message DeleteTenantsRequest {
  repeated string tenants = 1;
}

message Tenant {
  string name = 1;
  string status = 2;
  repeated string nodes = 3;
}
